internal/gatewayapi/testdata/backendtlspolicy-not-conflict-service.out.yaml
backendTLSPolicies:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls1
    namespace: envoy-gateway
  spec:
    targetRefs:
    - group: ""
      kind: Service
      name: http-backend
      sectionName: http1
    - group: ""
      kind: Service
      name: http-backend
      sectionName: http2
    validation:
      caCertificateRefs:
      - group: ""
        kind: ConfigMap
        name: ca-cmap
      hostname: example.com
  status:
    ancestors:
    - ancestorRef:
        name: gateway-btls
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Resolved all the Object references.
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: BackendTLSPolicy
  metadata:
    name: policy-btls2
    namespace: envoy-gateway
  spec:
    targetRefs:
    - group: ""
      kind: Service
      name: http-backend
      sectionName: http2
    validation:
      caCertificateRefs:
      - group: ""
        kind: ConfigMap
        name: ca-cmap
      hostname: example.com
  status:
    ancestors:
    - ancestorRef:
        name: gateway-btls
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy conflicts with BackendTLSPolicy envoy-gateway/policy-btls1.
        reason: Conflicted
        status: "False"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-btls
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 2
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-btls-1
    namespace: envoy-gateway
  spec:
    parentRefs:
    - name: gateway-btls
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: http-backend
        namespace: envoy-gateway
        port: 8080
      matches:
      - path:
          type: Exact
          value: /exact-1
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-btls
        namespace: envoy-gateway
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-btls-2
    namespace: envoy-gateway
  spec:
    parentRefs:
    - name: gateway-btls
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: http-backend
        namespace: envoy-gateway
        port: 8081
      matches:
      - path:
          type: Exact
          value: /exact-2
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-btls
        namespace: envoy-gateway
        sectionName: http
infraIR:
  envoy-gateway/gateway-btls:
    proxy:
      listeners:
      - name: envoy-gateway/gateway-btls/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-btls
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-btls
      namespace: envoy-gateway-system
xdsIR:
  envoy-gateway/gateway-btls:
    accessLog:
      json:
      - path: /dev/stdout
    caCertificates:
    - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKekNDQWcrZ0F3SUJBZ0lVQWw2VUtJdUttenRlODFjbGx6NVBmZE4ySWxJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHQTFVRUNnd0dhM1ZpWldSaU1CNFhEVEl6TVRBdwpNakExTkRFMU4xb1hEVEkwTVRBd01UQTFOREUxTjFvd0l6RVFNQTRHQTFVRUF3d0hiWGxqYVdWdWRERVBNQTBHCkExVUVDZ3dHYTNWaVpXUmlNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXdTVGMKMXlqOEhXNjJueW5rRmJYbzRWWEt2MmpDMFBNN2RQVmt5ODdGd2VaY1RLTG9XUVZQUUUycDJrTERLNk9Fc3ptTQp5eXIreHhXd [...]
      name: upstream-ca:configmap/envoy-gateway/ca-cmap
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-btls-a945b5bb
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-btls
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-btls-a945b5bb
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-btls
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-btls
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-btls/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-btls-1
            namespace: envoy-gateway
          name: httproute/envoy-gateway/httproute-btls-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 10.244.0.11
              port: 8080
            metadata:
              kind: Service
              name: http-backend
              namespace: envoy-gateway
              sectionName: "8080"
            name: httproute/envoy-gateway/httproute-btls-1/rule/0/backend/0
            protocol: HTTP
            tls:
              alpnProtocols: null
              caCertificate:
                name: upstream-ca:configmap/envoy-gateway/ca-cmap
              maxVersion: "1.3"
              minVersion: "1.2"
              sni: example.com
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-btls-1
          namespace: envoy-gateway
        name: httproute/envoy-gateway/httproute-btls-1/rule/0/match/0/*
        pathMatch:
          distinct: false
          exact: /exact-1
          name: ""
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-btls-2
            namespace: envoy-gateway
          name: httproute/envoy-gateway/httproute-btls-2/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 10.244.0.11
              port: 8081
            metadata:
              kind: Service
              name: http-backend
              namespace: envoy-gateway
              sectionName: "8081"
            name: httproute/envoy-gateway/httproute-btls-2/rule/0/backend/0
            protocol: HTTP
            tls:
              alpnProtocols: null
              caCertificate:
                name: upstream-ca:configmap/envoy-gateway/ca-cmap
              maxVersion: "1.3"
              minVersion: "1.2"
              sni: example.com
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-btls-2
          namespace: envoy-gateway
        name: httproute/envoy-gateway/httproute-btls-2/rule/0/match/0/*
        pathMatch:
          distinct: false
          exact: /exact-2
          name: ""
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
